--- a/Wave background no svg/index.scss
+++ b/Wave background no svg/index.scss
@@ -3,15 +3,16 @@
     padding: 0;
 }
 .curved {
-    margin-top: 80px;
-    height: 60vh;
-    padding: 30px;
+    min-height: 50vh;
     background: rgb(255, 145, 0);
     color: #fff;
     text-align: center;
     justify-content: center;
-    display: flex;
-    flex-direction: column;
+    .curvedContent {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+    }
     h1 {
         font-size: 3rem;
         font-family: "Segoe UI", cursive, Tahoma, Geneva, Verdana, sans-serif;
@@ -19,4 +20,15 @@
     p {
         font-family: cursive;
     }
+    svg{
+        display: block;
+    }
+}
+.content{
+    margin: 10px;
+    padding: 16px;
+    text-align: center;
+}
+.btn-search:hover{
+    background-color:var(--indigo);outline: var(--purple);
 }
