--- a/Showing content on scroll/stylesheet/style.css
+++ b/Showing content on scroll/stylesheet/style.css
@@ -7,7 +7,6 @@ body {
     background-color: hsl(5, 77%, 91%);
 }
 /* header */
-
 .header,
 .content {
     min-width: 350px;
@@ -19,8 +18,35 @@ body {
     background-color: #ffcfcb;
 }
 .header {
-    margin-top: 2rem;
+    position: relative;
+    padding-top: 8rem;
+    margin-top: 3rem;
     margin-bottom: 5px;
+    /* opacity: 0; */
+    font-family: cursive;
+    transform: scale(0.8);
+    transition: opacity 0.25s ease-in-out, transform 0.5s linear;
+}
+.main-photo {
+    position: absolute;
+    background: url("../images/logo-1.jpg");
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transform: scale(0.7);
+}
+.menu-btn {
+    position: absolute;
+    right: 14px;
+    top: 15px;
+    padding: 9px;
+    font-size: 35px;
+    transform: rotate(90deg);
+    letter-spacing: -0.8px;
 }
 ul,
 p {
@@ -32,9 +58,8 @@ p > strong {
     font-size: 1.4rem;
 }
 
-
 /* img designing */
-img{
+img {
     width: 90%;
     height: auto;
 }
@@ -43,19 +68,29 @@ img{
     text-align: center;
     background-color: floralwhite;
     min-width: 199px;
-    width: 50%;
+    width: 45%;
     margin: -10px auto 13vh auto;
     padding: 10px;
-    transform: translateX(-20%) rotate(-8deg);
-    box-shadow: -1px 8px 10px 0px #797979;    
+    box-shadow: -1px 8px 10px 0px #797979;
+    border-radius: 0.3em;
+    opacity: 0;
+    transform: translateX(1%) rotate(-1deg);
+
+    transition: opacity 0.5s cubic-bezier(0.1, 0.48, 0.45, 0.94), transform 1s;
 }
 .grid-item div {
     padding: 20px 10px;
     text-align: center;
     justify-content: center;
 }
-
-
+.isVisible {
+    opacity: 1;
+    transform: translateX(-20%) rotate(-8deg);
+}
+.header.isVisible {
+    opacity: 1;
+    transform: none;
+}
 /*Footer*/
 footer {
     display: block;
