--- a/Icons and Buttons/Social icons project/index.css
+++ b/Icons and Buttons/Social icons project/index.css
@@ -2,7 +2,9 @@ body {
   /* background-color: var(--dark); */
   background-color: #0e1419;
 }
-
+.container{
+  min-height: 150px;
+}
 .one {
   padding: 10px;
   margin-top: 2rem;
