--- a/Icons and Buttons/Slider switch Button/index.css
+++ b/Icons and Buttons/Slider switch Button/index.css
@@ -1,5 +1,70 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background: #292929;
 }
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+input[type="checkbox"] {
+    position: relative;
+    width: 120px;
+    height: 40px;
+    -webkit-appearance: none;
+    background: linear-gradient(0deg, #333, #000);
+    outline: none;
+    border-radius: 20px;
+    box-shadow: 0 0 0 4px #353535, 0 0 0 5px #3e3e3e, inset 0 0 10px rgba(0, 0, 0, 1), 0 5px 20px rgba(0, 0, 0, 0.5);
+}
+
+input[type="checkbox"]:before {
+    content: "";
+    position: absolute;
+    width: 80px;
+    height: 40px;
+    background: linear-gradient(0deg, #000, #6b6b6b);
+    border-radius: 20px;
+    top: 0;
+    left: 0;
+    transform: scale(0.98, 0.96);
+    box-shadow: 0 0 0 1px #232323;
+    transition: 0.5s;
+}
+
+input:checked[type="checkbox"]:before {
+    box-shadow: 0 0 0 1px #00a1ff;
+    left: 40px;
+}
+input:checked[type="checkbox"] {
+    background: #00a1ff;
+    box-shadow:0 0 1.5px #6dd1ff, 0 0 0 4px #353535, 0 0 0 5px #3e3e3e, inset 0 0 10px rgba(0, 0, 0, 1), 0 5px 20px rgba(0, 0, 0, 0.5);
+}
+/*Can add this too. it has 2 type of min button design switch width and border-radius to see*/
+/*
+input[type="checkbox"]::after {
+    content: "";
+    position: absolute;
+    width: 6px;
+    height: 4px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 65px;  
+    background: linear-gradient( 0deg, #6b6b6b, #000);
+    border-radius: 40%;
+    width:4px ; 
+    border-radius: 50%;
+    transition: .5s;
+    
+}
+
+input:checked[type="checkbox"]::after {
+    box-shadow: 0 0 5px #00a1ff, inset 0 0 1px #575757;
+    left: 105px;
+    background: #00a1ff;
+}
+*/
