--- a/Blog landing pages/Car expo 2020's best car/style.css
+++ b/Blog landing pages/Car expo 2020's best car/style.css
@@ -72,7 +72,7 @@ nav ul ::after {
     cursor: pointer;
 }
 .content button:hover {
-    outline-style:1px solid red;
+    outline:1px solid red;
 }
 .car-image {
     width: 55%;
