--- a/Best Responsive Navbars/Navbar3/style.css
+++ b/Best Responsive Navbars/Navbar3/style.css
@@ -1,4 +1,5 @@
 * {
+  font-family: 'Architects Daughter', cursive;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -58,12 +59,12 @@ a {
   border: 1px solid #a2a2a2;
   background-color: #f4f4f4;
   -webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
-  border-radius: 5px;
+          box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 0 0 7px 7px;
 }
 
 /* ================================= 
-  Media Queries
+ 			 Media Queries
 ==================================== */
 @media (min-width: 769px) {
   .header,
@@ -94,9 +95,13 @@ a {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
+}
+
+.content {
+  margin: 4px;
+  padding: 5px;
 }
 /*# sourceMappingURL=style.css.map */
