--- a/Best Responsive Navbars/Navbar3/style.scss
+++ b/Best Responsive Navbars/Navbar3/style.scss
@@ -1,4 +1,6 @@
+
 * {
+	font-family: 'Architects Daughter', cursive;
 	box-sizing: border-box;
 }
 body {
@@ -53,16 +55,13 @@ a {
 	padding-bottom: 0.5em;
 	border: 1px solid #a2a2a2;
 	background-color: #f4f4f4;
-	-webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
-	-moz-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
 	box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+	
+	border-radius: 0 0 7px 7px;
 }
 
 /* ================================= 
-  Media Queries
+ 			 Media Queries
 ==================================== */
 
 @media (min-width: 769px) {
@@ -84,6 +83,10 @@ a {
 @media (min-width: 1025px) {
 	.header {
 		flex-direction: row;
-		justify-content: space-between;
+		justify-content: space-around;
 	}
+}
+.content{
+	margin: 4px;
+	padding: 5px;
 }
