--- a/Icons and Buttons/A Switch with light/stylesheet/style.css
+++ b/Icons and Buttons/A Switch with light/stylesheet/style.css
@@ -25,10 +25,7 @@ label .btn {
     border-radius: 50%;
     box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgb(0, 0, 0, 1), inset 0 2px 2px rgb(255, 255, 255, 0.5),
         0 0 0 2px #000, 0 0 0 5px #0c0c0c, 0 0 0 5.5px #080808;
-}
-label input[type="checkbox"]:checked ~ .btn {
-    box-shadow: 0 0 0 rgb(0, 0, 0, 1), inset 0 -2px 5px rgb(0, 0, 0, 1), inset 0 1px 1px rgb(255, 255, 255, 0.1),
-        0 0 0 2px #000, 0 0 0 5px #0c0c0c, 0 0 0 5.5px #00a1ff;
+        transition: all 1s cubic-bezier(0.03, 0.99, 1, 1);
 }
 label input[type="checkbox"] {
     -webkit-appearance: none;
@@ -36,6 +33,10 @@ label input[type="checkbox"] {
     z-index: 2;
     width: 100px;
     height: 100px;
+}
+label input[type="checkbox"]:checked ~ .btn {
+    box-shadow: 0 0 0 rgb(0, 0, 0, 1), inset 0 -2px 5px rgb(0, 0, 0, 1), inset 0 1px 1px rgb(255, 255, 255, 0.1),
+        0 0 0 2px #000, 0 0 0 5px #0c0c0c, 0 0 11px 6px #00a1ff;
 }
 label .fa {
     position: absolute;
