business card update

--- a/Bussiness Card/bussinessCard.css
+++ b/Bussiness Card/bussinessCard.css
@@ -14,7 +14,7 @@ body {
     height: 340px;
     margin: 0 auto;
     position: relative;
-    perspective: 1000;
+    perspective: 1000px;
     transform-style: preserve-3d;
     perspective-origin: right;
     margin-top: -50px;
@@ -44,7 +44,7 @@ body {
     font-family: sans-serif;
 }
 .cotainer:hover .card {
-    transform: rotateY(180deg) translateX(100%);
+    transform: rotateY(180deg) translateX(100%) perspective(1000px) translateZ(-200px);
     cursor: pointer;
 }
 ul {
