--- a/Clip-path property/CSS/CSS.css
+++ b/Clip-path property/CSS/CSS.css
@@ -14,9 +14,9 @@ body {
   grid-row: wrap;
   justify-items: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
   font-family: "Courier New", Courier, monospace;
+  align-items: center;
 }
 
 .container1 {
@@ -30,12 +30,12 @@ body {
   padding: 1em;
   border-radius: inherit;
   width: 100%;
-  -webkit-transition: -webkit-clip-path 0.5s ease-in-out;
-  transition: -webkit-clip-path 0.5s ease-in-out;
-  transition: clip-path 0.5s ease-in-out;
+  /* -webkit-transition: -webkit-clip-path 0.5s ease-in-out; */
+  /* transition: -webkit-clip-path 0.5s ease-in-out; */
+  /* transition: clip-path 0.5s ease-in-out; */
   transition: clip-path 0.5s ease-in-out, -webkit-clip-path 0.5s ease-in-out;
-  -webkit-clip-path: circle(7.5% at 0% 0%);
-          clip-path: circle(7.5% at 0% 0%);
+  /* -webkit-clip-path: circle(7.5% at 0% 0%); */
+  clip-path: circle(14.5% at 32% 38%);
 }
 
 .container1 .inner h1 {
@@ -49,8 +49,8 @@ body {
 }
 
 .container1:hover .inner {
-  -webkit-clip-path: circle(75%);
-          clip-path: circle(75%);
+  /* -webkit-clip-path: circle(75%); */
+  clip-path: circle(78%);
 }
 
 .container2 .inner {
@@ -107,12 +107,12 @@ body {
   padding: 1em;
   border-radius: 10px;
   width: 100%;
-  -webkit-transition: background-color 1.1s ease-out,-webkit-clip-path 0.5s ease-in-out;
-  transition: background-color 1.1s ease-out,-webkit-clip-path 0.5s ease-in-out;
+  /* -webkit-transition: background-color 1.1s ease-out,-webkit-clip-path 0.5s ease-in-out; */
+  /* transition: background-color 1.1s ease-out,-webkit-clip-path 0.5s ease-in-out; */
   transition: clip-path 0.5s ease-in-out,background-color 1.1s ease-out;
   transition: clip-path 0.5s ease-in-out,background-color 1.1s ease-out,-webkit-clip-path 0.5s ease-in-out;
-  -webkit-clip-path: inset(0% 0% 0% 100%);
-          clip-path: inset(0% 0% 0% 100%);
+  /* -webkit-clip-path: inset(0% 0% 0% 100%); */
+  clip-path: inset(0% 0% 0% 93%);
   /*Hide at the right*/
 }
 
