--- a/ProductFlipEffect/Stylesheet/Style.css
+++ b/ProductFlipEffect/Stylesheet/Style.css
@@ -32,7 +32,8 @@
     transform-style: preserve-3d;
 }
 .flip-card-inner .flip-card-front img {
-    width: 250px;display: block;
+    width: 250px;
+    display: block;
     margin: 15px auto;
 }
 
