--- a/Display none with Animation/style.scss
+++ b/Display none with Animation/style.scss
@@ -1,5 +1,6 @@
+$cyan-9: cyan;
 .modal {
-	box-shadow: var(--shadow-2), 0 0 0 100vw rgb(0 0 0 / 0.5);
+	box-shadow: var($shadow-2), 0 0 0 100vw rgb(0 0 0 / 0.5);
 
 	background: #fff;
 	color: #222;
@@ -77,33 +78,33 @@ body {
 	font-family: system-ui;
 	font-size: 1.25rem;
 	line-height: 1.5;
-	color: var(--gray-8);
+	color: var($gray-8);
 	// background-image: url('https://images.unsplash.com/photo-1644242629712-943ae5c8c4f3?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0Njc1MjQxNA&ixlib=rb-1.2.1&q=85');
 	// background-size: cover;
 }
 
 h1 em {
-	color: var(--cyan-9);
+	color: var($cyan-9);
 	text-decoration: underline;
 	text-underline-offset: 0.25em;
 }
 
 h2 {
-	color: var(--cyan-9);
+	color: var($cyan-9);
 }
 
 .button {
 	border: 0;
 	cursor: pointer;
-	background: var(--gray-8);
-	color: var(--gray-2);
+	background: var($gray-8);
+	color: var($gray-2);
 	font-weight: 700;
-	padding: var(--size-2) var(--size-4);
+	padding: var($size-2) var($size-4);
 }
 
 .button:hover,
 .button:focus {
-	background: var(--cyan-9);
+	background: var($cyan-9);
 }
 
 form {
