--- a/Buttons and Icons/Switch with inner ring/button2.css
+++ b/Buttons and Icons/Switch with inner ring/button2.css
@@ -4,7 +4,6 @@ body {
   background: #2d2d39;
   font-family: "Montserrat", sans-serif;
 }
-
 html a,
 body a {
   text-decoration: none;
@@ -16,8 +15,7 @@ body a {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   text-align: center;
 }
 
@@ -30,45 +28,36 @@ body a {
   height: 35px;
   clear: both;
   border-radius: 50px;
-  -webkit-box-shadow: inset 0px 1px 2px #121117, 0px 1px 1px #3e3d4b;
-          box-shadow: inset 0px 1px 2px #121117, 0px 1px 1px #3e3d4b;
+  box-shadow: inset 0px 1px 2px #121117, 0px 1px 1px #3e3d4b;
 }
-
 .k-switch.on .track {
   left: 45px;
 }
-
 .k-switch.on .ball.red {
   opacity: 0;
   visibility: hidden;
 }
-
 .k-switch.on .ball.green {
   opacity: 1;
   visibility: visible;
 }
-
 .k-switch .ball {
   width: 12px;
   height: 12px;
   border: 1px solid;
   margin: 11px;
-  -webkit-transition: all 0.05s ease-in-out;
   transition: all 0.05s ease-in-out;
   border-radius: 50%;
 }
-
 .k-switch .ball.red {
   float: right;
   border-color: #e73d3d;
 }
-
 .k-switch .ball.green {
   float: left;
   opacity: 0;
   border-color: #6cda86;
 }
-
 .k-switch .track {
   width: 25px;
   height: 25px;
@@ -76,11 +65,7 @@ body a {
   position: absolute;
   left: 0;
   border-radius: 50%;
-  background: -webkit-gradient(linear, left bottom, left top, from(#323141), color-stop(47%, #383546), to(#3c3b4d));
   background: linear-gradient(to top, #323141 0%, #383546 47%, #3c3b4d 100%);
-  -webkit-box-shadow: 0px 1px 2px #121117, inset 0px 1px 2px #444257;
-          box-shadow: 0px 1px 2px #121117, inset 0px 1px 2px #444257;
-  -webkit-transition: all 0.8s ease;
+  box-shadow: 0px 1px 2px #121117, inset 0px 1px 2px #444257;
   transition: all 0.8s ease;
-}
-/*# sourceMappingURL=button2.css.map */
+}/*# sourceMappingURL=button2.css.map */
