--- a/Clip-path property/CSS/CSS.css
+++ b/Clip-path property/CSS/CSS.css
@@ -1,22 +1,18 @@
 * {
   margin: 0px;
   padding: 0px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-  background: #c7e5f0;
+  background: rgb(199, 229, 240);
   height: 100vh;
   margin: 0;
-  display: -ms-grid;
   display: grid;
   grid-row: wrap;
   justify-items: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  font-family: "Courier New", Courier, monospace;
   align-items: center;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .container1 {
@@ -24,74 +20,61 @@ body {
   background-color: white;
   border-radius: 10px;
 }
-
 .container1 .inner {
-  background-color: #54ade9;
+  background-color: rgb(84, 173, 233);
   padding: 1em;
   border-radius: inherit;
   width: 100%;
-  /* -webkit-transition: -webkit-clip-path 0.5s ease-in-out; */
-  /* transition: -webkit-clip-path 0.5s ease-in-out; */
-  /* transition: clip-path 0.5s ease-in-out; */
+  transition: -webkit-clip-path 0.5s ease-in-out;
+  transition: clip-path 0.5s ease-in-out;
   transition: clip-path 0.5s ease-in-out, -webkit-clip-path 0.5s ease-in-out;
-  /* -webkit-clip-path: circle(7.5% at 0% 0%); */
-  clip-path: circle(14.5% at 32% 38%);
+  -webkit-clip-path: circle(7.5% at 0% 0%);
+          clip-path: circle(7.5% at 0% 0%);
 }
-
 .container1 .inner h1 {
   color: white;
   margin: 0;
 }
-
 .container1 .inner p {
   color: white;
   font-size: 0.9rem;
 }
-
 .container1:hover .inner {
-  /* -webkit-clip-path: circle(75%); */
-  clip-path: circle(78%);
+  -webkit-clip-path: circle(75%);
+          clip-path: circle(75%);
 }
 
 .container2 .inner {
-  background-color: #54e9d5;
+  background-color: rgb(84, 233, 213);
   padding: 1em;
   border-radius: 10px;
-  width: 350px;
-  /*To control the location of eye. Use mediaQuery to make it responsive*/
+  width: 350px; /*To control the location of eye. Use mediaQuery to make it responsive*/
   -webkit-clip-path: circle(7.5% at 90% 15%);
           clip-path: circle(7.5% at 90% 15%);
-  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
-
 .container2 .inner:hover {
   -webkit-clip-path: circle(75%);
           clip-path: circle(75%);
-  background-color: #54ade9;
+  background-color: rgb(84, 173, 233);
 }
-
 .container2 .inner h1 {
   color: white;
   margin: 0;
 }
-
 .container2 .inner p {
   color: white;
   font-size: 0.9rem;
 }
-
 .container2 .inner span {
   float: right;
   font-weight: bold;
   color: white;
-  -webkit-transition: opacity 0.5s ease;
   transition: opacity 0.5s ease;
   position: relative;
   margin: -5px 15px 0px 0px;
 }
-
 .container2 .inner:hover span {
   opacity: 0;
 }
@@ -101,35 +84,27 @@ body {
   background-color: white;
   border-radius: 10px;
 }
-
 .container3 .inner {
-  background-color: #54ade9;
+  background-color: rgb(84, 173, 233);
   padding: 1em;
   border-radius: 10px;
   width: 100%;
-  /* -webkit-transition: background-color 1.1s ease-out,-webkit-clip-path 0.5s ease-in-out; */
-  /* transition: background-color 1.1s ease-out,-webkit-clip-path 0.5s ease-in-out; */
-  transition: clip-path 0.5s ease-in-out,background-color 1.1s ease-out;
-  transition: clip-path 0.5s ease-in-out,background-color 1.1s ease-out,-webkit-clip-path 0.5s ease-in-out;
-  /* -webkit-clip-path: inset(0% 0% 0% 100%); */
-  clip-path: inset(0% 0% 0% 93%);
-  /*Hide at the right*/
+  transition: background-color 1.1s ease-out, -webkit-clip-path 0.5s ease-in-out;
+  transition: clip-path 0.5s ease-in-out, background-color 1.1s ease-out;
+  transition: clip-path 0.5s ease-in-out, background-color 1.1s ease-out, -webkit-clip-path 0.5s ease-in-out;
+  -webkit-clip-path: inset(0% 0% 0% 100%);
+          clip-path: inset(0% 0% 0% 100%); /*Hide at the right*/
 }
-
 .container3 .inner h1 {
   color: white;
   margin: 0;
 }
-
 .container3 .inner p {
   color: white;
   font-size: 0.9rem;
 }
-
 .container3:hover .inner {
   -webkit-clip-path: inset(0% 0% 0% 0%);
-          clip-path: inset(0% 0% 0% 0%);
-  /*Cover the parent container*/
-  background-color: #54e9d5;
-}
-/*# sourceMappingURL=CSS.css.map */
+          clip-path: inset(0% 0% 0% 0%); /*Cover the parent container*/
+  background-color: rgb(84, 233, 213);
+}/*# sourceMappingURL=CSS.css.map */
