--- a/OnScreenAutoActions/animated-navigation/style.css
+++ b/OnScreenAutoActions/animated-navigation/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,14 +6,8 @@
 
 body {
   background-color: #eafbff;
-  background-image: linear-gradient(
-    to bottom,
-    #eafbff 0%,
-    #eafbff 50%,
-    #5290f9 50%,
-    #5290f9 100%
-  );
-  font-family: 'Muli', sans-serif;
+  background-image: linear-gradient(to bottom, #eafbff 0%, #eafbff 50%, #5290f9 50%, #5290f9 100%);
+  font-family: "Muli", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,7 +48,9 @@ nav.active ul {
 nav ul li {
   transform: rotateY(0deg);
   opacity: 0;
-  transition: transform 0.6s linear, opacity 0.6s linear;
+  transition:
+    transform 0.6s linear,
+    opacity 0.6s linear;
 }
 
 nav.active ul li {
