--- a/Frontend Components/Scratch - card/style.css
+++ b/Frontend Components/Scratch - card/style.css
@@ -3,43 +3,53 @@
 	margin: 0;
 	box-sizing: border-box;
 }
-
-.heading {
-	font-size: 2em;
-	text-align: center;
-	margin-bottom: 1em;
+body {
+	height: 100vh;
+	background: linear-gradient(135deg, #c3a3f1, #6414e9);
 }
-
-.scratch-card-container {
-	margin: auto;
-	display: grid;
-	place-items: center;
-	background: #f4f4f4;
-	position: relative;
-	width: 300px;
-	height: 200px;
-	border: 2px solid #ccc;
-	box-shadow: 1px 0px 5px rgb(53, 53, 53);
-	border-radius: 10px;
-	overflow: hidden;
-}
-.message,
-#scratchCanvas {
+.container {
+	width: 31em;
+	height: 31em;
+	background-color: #f5f5f5;
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+	transform: translate(-50%, -50%);
+	top: 50%;
+	left: 50%;
+	border-radius: 0.6em;
 }
-.message {
-	background: rgb(255, 255, 255);
-	z-index: 1;
-
-	display: grid;
-	place-items: center;
+.base,
+#scratch {
+	height: 200px;
+	width: 200px;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	top: 50%;
+	left: 50%;
+	text-align: center;
+	cursor: grabbing;
+	border-radius: 0.3em;
 }
-
-#scratchCanvas {
-	background: #aaa;
-	z-index: 2;
+.base {
+	background-color: #ffffff;
+	font-family: "Poppins", sans-serif;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	box-shadow: 0 1.2em 2.5em rgba(16, 2, 96, 0.15);
+}
+.base h3 {
+	font-weight: 600;
+	font-size: 1.5em;
+	color: #17013b;
+}
+.base h4 {
+	font-weight: 400;
+	color: #746e7e;
+}
+#scratch {
+	-webkit-tap-highlight-color: transparent;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	user-select: none;
 }
